feat: add json files to jar